Refactor Dashboard, Login, Matches, Profile Controllers and ViewModels; Introduce AppClock for time management; Enhance logging and error handling; Add unit tests for AppClock, EnumSetUtil, ErrorMessages, and SoftDeletable; Update logging configuration for tests.